--- a/text/README
+++ b/text/README
@@ -8,6 +8,7 @@ kosmickeZareni
 -propojit informace z detektory.tex s experimentDosis.tex
 -v detektory.tex divně obrázky a tabulky
 -porovnat jednotlivé PADC materiály (detektory.tex)
+-ageing, fading u detektorů?
 
 POZNÁMKY
 ISS.tex
