--- a/text/citace.bib
+++ b/text/citace.bib
@@ -131,6 +131,15 @@ To easily access such an amount of data, a single point access is becoming essen
     date={2017-04-27},
     urldate={2017-05-10},
 }
+solarCycle
+@online{solarCycle_wiki,
+    author={Wikipedia, The Free Encyclopedia},
+    organization={Wikipedia, The Free Encyclopedia},
+    title={Solar Cycle},
+    url={https://en.wikipedia.org/wiki/Solar_cycle},
+    date={2017-06-04},
+    urldate={2017-06-11},
+}
 
 %ISS
 %NASA, ISS_celek.jpg
@@ -322,6 +331,37 @@ eprint = {http://dx.doi.org/10.1063/1.1703059}
     urldate={2017-05-25},
 }
 
+%nejistoty
+@article{nejistoty,
+title = "Uncertainties in linear energy transfer spectra measured with track-etched detectors in space ",
+journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment ",
+volume = "713",
+number = "",
+pages = "5 - 10",
+year = "2013",
+note = "",
+issn = "0168-9002",
+doi = "https://doi.org/10.1016/j.nima.2013.03.012",
+url = "http://www.sciencedirect.com/science/article/pii/S0168900213002866",
+author = "Kateřina Pachnerová Brabcová and Iva Ambrožová and Zlata Kolísková and Alexandr Malušek",
+keywords = "CR-39",
+keywords = "Linear energy transfer",
+keywords = "Uncertainty model",
+keywords = "Space dosimetry "
+}
+
+%dataTLD_RR
+@inproceedings{dataTLD_RR,
+    author = {I. Ambrožová and V. A. Shurshakov and R. V. Tolochek and K. Pachnerová Brabcová and J. Kubančák and B. Vlček and F. Spurný},
+    title = {Monitoring  onboard  of  iss  with  passive  detectors -- 5 years experience},
+    booktitle = {Space Weather Effects on Humans: in Space and on Earth},
+    year = {2013},
+    url = {http://www.iki.rssi.ru/books/2013breus1.pdf},
+    volume = {1},
+    location = {Moskva},
+    editor = {A.I. Grigoriev and L.M. Zeleny},
+    pages = {284 - 291}
+}
 
 %dosis
 @online{dosis_oulu,
@@ -342,5 +382,26 @@ eprint = {http://dx.doi.org/10.1063/1.1703059}
     urldate={2017-05-13},
 }
 
+%závěr
+%ambrozova_dvaExperimenty
+@article{ambrozova_dvaExperimenty,
+title = "Cosmic radiation monitoring at low-Earth orbit by means of thermoluminescence and plastic nuclear track detectors ",
+journal = "Radiation Measurements ",
+volume = "",
+number = "",
+pages = " - ",
+year = "2016",
+note = "",
+issn = "1350-4487",
+doi = "https://doi.org/10.1016/j.radmeas.2016.12.004",
+url = "http://www.sciencedirect.com/science/article/pii/S1350448716304401",
+author = "Iva Ambrožová and Kateřina Pachnerová Brabcová and Jan Kubančák and Jakub Šlegl and Raisa V. Tolochek and Olga A. Ivanova and Vyacheslav A. Shurshakov",
+keywords = "BION-M1",
+keywords = "Cosmic radiation",
+keywords = "Low Earth orbit",
+keywords = "Passive detector",
+keywords = "Thermoluminescent detector",
+keywords = "Plastic nuclear track detector "
+}
 
 %pozn.: clanky rozradit do kapitol (aby by to bylo prehlednejsi)
