--- a/text/parts/experimentDosis.tex
+++ b/text/parts/experimentDosis.tex
@@ -203,7 +203,7 @@ Informace byly brány z \cite{dosis}.
 \section{Výsledky}
 Zde jsou uvedeny výsledky publikované v \cite{dosis}. Jedná se o data naměřená TL a OSL detektory z obou sad DOSIS a z prvních šesti sad DOSIS3D, tedy o data naměřená mezi lety 2009 a 2015. Pro větší názornost jsou zde uvedeny i obrázky z \cite{dosis2}, které byly získány z dat naměřených aktivními detektory. 
 
-Na naměřená data lze pohlížet z několika hledisek. Nejprve je uvedeno srovnání dat získaných z několika TL a ze všech OSL detektorů v rámci jedné sady experimentu DOSIS3D, konkrétně druhé. Poté následuje srovnání dat, které byly získány TL detektory $^6$LiF:Mg,Ti a $^7$LiF:Mg,Ti v rámci všech osmi vyhodnocených sad. Dále je zmíněno stručné porovnání dat z pasivních a aktivních detektorů; nakonec je uvedeno krátké srovnání s daty naměřenými mimo modul Columbus. 
+Na naměřená data lze pohlížet z několika hledisek. Nejprve je uvedeno srovnání dat získaných z několika TL a ze všech OSL detektorů v rámci jedné sady experimentu DOSIS3D, konkrétně druhé. Poté následuje srovnání dat, které byly získány TL detektorem $^7$LiF:Mg,Ti v rámci všech osmi vyhodnocených sad. Dále je zmíněno stručné porovnání dat z pasivních a aktivních detektorů. 
 
 Srovnáním dat od TL detektorů z DOSIS3D s daty získanými v ISS mimo modul Columbus od detektorů stejného materiálu plyne, že velmi závisí na lokálním stínění. Data se v závislosti na jeho tloušťce mohou lišit až dvojnásobně.  
 
@@ -244,13 +244,15 @@ Výsledky z OSLD jsou celkem ve shodě vzhledem k rozmanitosti vyhodnocovacích 
   \caption{Naměřené dávkové příkony detektory různých materiálů. Na ose $x$ jsou čísla PDP, jejichž pořadí je založeno na poloze PDP v modulu Columbus (viz \ref{fig:columbus_rozmisteni}) \cite{dosis}.}
   \label{fig:dosis_vysl_jednaSada}
 \end{figure}
-\subsection{Srovnání dat z osmi sad pro jeden pasivní detektor}
-Obr. \ref{fig:dosis_vysl_viceSad} zobrazuje zprůměrovaný rozsah dávkových příkonů, které byly určeny z dat $^7$LiF:Mg,Ti od několika organizací; například pro D3D2 (druhá sada DOSIS3D) je interval naměřených dávkových příkonů přibližně [250, 350] $\mu$Gy/den (lze srovnat s obr. \ref{fig:dosis_vysl_jednaSada}). Na ose $x$ je čas v letech. Obrázek dále obsahuje v horní části nadmořskou výšku ISS a četnost neutronů naměřených Oulu monitorem (viz oddíl \ref{sec:dosis_altitudeSlunecniCyklus}). Pokles dávkového příkonu z DOS1 na DOS2 (sady 1 a 2 experimentu DOSIS) byl způsoben vzrůstající sluneční aktivitou; prudký vzrůst z DOS2 na D3D1 je spojen s nárazovitým zvýšením nadmořské výšky ISS; poté se už nadmořská výška moc neměnila a pomalý pokles je tedy dán
+\subsection{Srovnání dat z osmi sad pro jeden druh pasivního detektoru}
+Srovnávala se data od TLD $^7$LiF:Mg,Ti ze všech PDP. Obr. \ref{fig:dosis_vysl_viceSad} zobrazuje zprůměrovaný rozsah dávkových příkonů ze všech PDP; průměrování probíhalo přes příkony určené několika organizacemi.
+%které byly určeny z dat $^7$LiF:Mg,Ti od několika organizací; 
+Například pro D3D2 (druhá sada DOSIS3D) je interval naměřených dávkových příkonů přibližně [250, 350] $\mu$Gy/den (lze srovnat s obr. \ref{fig:dosis_vysl_jednaSada}). Na ose $x$ je čas v letech. Obrázek dále obsahuje v horní části nadmořskou výšku ISS a četnost neutronů naměřených Oulu monitorem (viz oddíl \ref{sec:dosis_altitudeSlunecniCyklus}). Pokles dávkového příkonu z DOS1 na DOS2 (sady 1 a 2 experimentu DOSIS) byl způsoben vzrůstající sluneční aktivitou; prudký vzrůst z DOS2 na D3D1 je spojen s nárazovitým zvýšením nadmořské výšky ISS; poté se už nadmořská výška moc neměnila a pomalý pokles je tedy dán
 hlavně vzrůstající sluneční aktivitou. Je zajímavé, že při D3D6 detektory obdržely jen o trochu vyšší dávky než při DOS1.
 \begin{figure}[h]
   \centering
   \includegraphics[width=0.65\textwidth]{dosis_vysl_viceSad.png}
-  \caption{Rozsahy dávkových příkonů naměřených TLD materiálem $^7$LiF:Mg,Ti v rámci prvních osmi sad experimentů DOSIS a DOSIS3D. V horní části obrázku jsou parametry ovlivňující velikost obdržené dávky, tj. nadmořská výška ISS a četnost neutronů naměřená Oulu monitorem \cite{dosis_oulu}, která souvisí se sluneční aktivitou.}
+  \caption{Rozsahy dávkových příkonů naměřených TLD materiálem $^7$LiF:Mg,Ti v rámci prvních osmi sad experimentů DOSIS a DOSIS3D. V horní části obrázku jsou parametry ovlivňující velikost obdržené dávky, tj. nadmořská výška ISS a četnost neutronů naměřená Oulu monitorem \cite{dosis_oulu}, která souvisí se sluneční aktivitou \cite{dosis}.}
   \label{fig:dosis_vysl_viceSad}
 \end{figure}
 
