--- a/text/parts/titlepage.tex
+++ b/text/parts/titlepage.tex
@@ -37,16 +37,19 @@ Děkuji Ing. Ivě Ambrožové, Ph.D. za vedení mé bakalářské práce, za cen
   Druh práce: & Bakalářská práce\\
   Vedoucí práce: & Ing. Iva Ambrožová, Ph.D.\\ 
                & Oddělení dozimetrie záření, Ústav jaderné fyziky AV ČR, v.v.i., Akademie věd České republiky\\
-  Konzultant: & <++>\\
-  Abstrakt: &  	
-Cílem práce bude studovat prostorovou distribuci dávkových veličin na různých místech ISS pomocí kombinace termoluminiscenčních detektorů a detektorů stop v pevné fázi, které byly poustupně umístěny na ISS v posledních několika letech. Student se seznámí s metodikou vyhodnocování detektorů, včetně měření a zpracování dat. \\
-  Klíčová slova: & <++>
+  Abstrakt: & Kosmické záření představuje veliký zdravotní risk při pobytu ve vesmíru. K jeho monitorování se používají i pasivní detektory, obzvláště pak termoluminiscenční detektory a detektory stop v pevné fázi. Experiment DOSIS, který probíhal v rozmezí let 2009--2011, měl za úkol stanovit prostorovou distribuci dávky uvnitř modulu Columbus, který je součástí Mezinárodní kosmické stanice. Se stejným cílem byl v roce 2012 spuštěn experiment DOSIS3D, jenž probíhá doposud. Z naměřených dat lze také do určité míry vyvodit závislost dávkového příkonu na řadě parametrů, např. sluneční aktivitě a nadmořské výšce. 
+  %Tato měření mohou zmenšit možné ozaření lidské posádky při budoucích letech do vesmíru.
+  Tato práce pojednává o složení kosmického záření v blízkém okolí Země, o výše zmíněných pasivních detektorech, o projektech DOSIS a DOSIS3D a nakonec je uvedena názorná ukázka vyhodnocení tří detektorů stop, které byly umístěny v modulu Columbus. \\
+  %Cílem práce bude studovat prostorovou distribuci dávkových veličin na různých místech ISS pomocí kombinace termoluminiscenčních detektorů a detektorů stop v pevné fázi, které byly poustupně umístěny na ISS v posledních několika letech. Student se seznámí s metodikou vyhodnocování detektorů, včetně měření a zpracování dat. \\
+  Klíčová slova: & kosmické záření v blízkém okolí Země, detektory stop v pevné fázi, ISS, modul Columbus, DOSIS, DOSIS3D
 \end{tabularx}
 \newpage
 \begin{tabularx}{\textwidth}{>{\itshape}l X}
   Title: & \textbf{Dose distribution inside the International Space Station}\\
   Author: & Michal Šesták\\
-  Abstract: & <++>\\
-  Key words: & <++>
+  Abstract: & Cosmic rays are representing a huge health risk. Passive detectors are widely used for their measurement, especially thermoluminescent detectors and solid state nuclear track detectors. Experiment DOSIS was running between years 2009--2011 and its purpose was the determination of radiation environment within the International Space Station's Columbus module. Experiment DOSIS3D, which has started in 2012, has the same aim. The measured data can also provide informations about influence of several parameters (for instance solar activity, altitude) to the dose rate. This thesis includes informations about characterictics of the cosmic rays in low Earth orbit, about passive detectors used in space measurements, about experiments DOSIS and
+  DOSIS3D. There is also involved the evaluation
+  of three track etched detectors at the end of the work.\\
+  Key words: & cosmic rays in low Earth orbit, solid state nuclear track detectors, ISS, Columbus module, DOSIS, DOSIS3D
 \end{tabularx}
 \newpage
