--- a/text/main.tex
+++ b/text/main.tex
@@ -1,7 +1,7 @@
 \RequirePackage[l2tabu, orthodox]{nag}
 \documentclass[a4paper,12pt,oneside]{report}
 \input{parts/preamble}
-%\includeonly{parts/titlepage}
+%\includeonly{parts/titlepage, parts/uvod}
 %\includeonly{parts/experimentDosis}
 %\includeonly{parts/experimentDosis, parts/detektory, parts/praktickaCast}
 %\includeonly{parts/praktickaCast}
@@ -31,9 +31,10 @@
 \include{parts/praktickaCast}
 
 \include{parts/zaver}
-\nocite{*}
+%\nocite{*}
 \printbibliography[title=Seznam literatury]
 \end{document}
+
 
 
 
